Agrego detalles a graf para obtener ultimos resultados

--- a/.gitignore
+++ b/.gitignore
@@ -7,20 +7,12 @@
 
 .idea
 
-/resultados\ trust
 /resultados trust
-
-/resultados\ var_comp
 /resultados var_comp
-
-/resultados\ comp
 /resultados comp
-
-/resultados\ new_var
 /resultados new_var
-
-/resultado\ especial
 /resultado especial
+/resultados iris
 
 /sets
 
